--- a/style.css
+++ b/style.css
@@ -44,13 +44,14 @@ img{
 
 .search-bar{
     width: 45vw;
-    height: 40px;
+    height: 45px;
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 20px;
     border-radius: 30px;
     outline: none;
     border: 1px solid rgba(0, 0, 0, 0.178);
+    font-size: 16px;
 }
 
 .search-buttons{
