--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ a{
 
 img{
     object-fit: contain;
-    margin-top: 1%;
+    margin-top: 8%;
     height: 90px;
 }
 
@@ -43,10 +43,11 @@ img{
 }
 
 .search-bar{
-    width: 45vw;
+    width: 40vw;
     height: 45px;
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
     padding: 20px;
     border-radius: 30px;
     outline: none;
