small changes in index.html, added classes in images.html and styling for them in css

--- a/style.css
+++ b/style.css
@@ -118,3 +118,8 @@ h2{
 .first-list{
     display: flex;
 }
+
+.homeLink:hover, .advancedLink:hover, .imagesLink:hover{
+    text-decoration: underline;
+}
+
