--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ a{
 }
 
 .center-part{
+    position: static;
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -121,5 +122,9 @@ h2{
 
 .homeLink:hover, .advancedLink:hover, .imagesLink:hover{
     text-decoration: underline;
+}
+
+.googleImages{
+    height: 95px;
 }
 
