unfinished project, saved it on github to continue on laptop

--- a/advancedStyle.css
+++ b/advancedStyle.css
@@ -6,6 +6,7 @@
 
 body{
     min-height: 100vh;
+    width: 100%;
 }
 img{
     margin: 20px;
@@ -14,7 +15,7 @@ img{
 }
 
 .advancedHeader{
-    margin: 25px 40px;
+    margin: 25px 60px;
     font-size: 22px;
     color: red;
 }
@@ -24,3 +25,33 @@ img{
     width: 100%;
     background-color: rgba(153, 153, 153, 0.295);
 }
+
+.title{
+    font-size: 20px;
+}
+
+.centerPart{
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    background-color: rebeccapurple;
+    margin: 30px auto;
+    overflow: hidden;
+}
+
+.leftSide{
+    width: 30%;
+    float: left;
+}
+
+
+.rightSide{
+    width: 20%;
+    float: left;
+}
+
+input{
+    height: 30px;
+    width: 300px;
+}
+
