--- a/advancedStyle.css
+++ b/advancedStyle.css
@@ -28,30 +28,32 @@ img{
 
 .title{
     font-size: 20px;
+    margin: 30px 0;
 }
 
 .centerPart{
-    width: 60%;
-    display: flex;
-    justify-content: center;
-    background-color: rebeccapurple;
-    margin: 30px auto;
-    overflow: hidden;
+    width: 95%;
+    height: 500px;
+    margin: 50px auto;
 }
 
-.leftSide{
-    width: 30%;
-    float: left;
-}
-
-
-.rightSide{
-    width: 20%;
-    float: left;
+label{
+    display: inline-block;
+    width: 200px;
+    text-align: left;
+    margin-top: 20px;
 }
 
 input{
     height: 30px;
-    width: 300px;
+    width: 550px;
+    outline: none;
+    cursor:text;
+    padding: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.199);
 }
 
+p{
+    display: inline-block;
+    margin-left: 15px;
+}
