--- a/advancedStyle.css
+++ b/advancedStyle.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 body{
@@ -28,7 +31,7 @@ img{
 
 .title{
     font-size: 20px;
-    margin: 30px 0;
+    display: inline-block;
 }
 
 .centerPart{
@@ -39,9 +42,10 @@ img{
 
 label{
     display: inline-block;
-    width: 200px;
+    width: 180px;
     text-align: left;
     margin-top: 20px;
+    font-size: 13px;
 }
 
 input{
@@ -56,4 +60,25 @@ input{
 p{
     display: inline-block;
     margin-left: 15px;
+    font-size: 12px;
+    color: rgb(88, 88, 88);
+}
+
+.titleRight{
+    float: right;
+    font-size: 14px;
+    margin-right: 465px;
+    color: gray;
+}
+
+header{
+    margin: 20px 30px;
+    float: right;
+}
+
+a{
+    margin-left: 15px;
+    font-size: 15px;
+    text-decoration: none;
+    color: rgb(22, 22, 22);
 }
