--- a/advancedStyle.css
+++ b/advancedStyle.css
@@ -21,6 +21,7 @@ img{
     margin: 25px 60px;
     font-size: 22px;
     color: red;
+    font-weight: 300;
 }
 
 .bottomLine{
@@ -81,4 +82,8 @@ a{
     font-size: 15px;
     text-decoration: none;
     color: rgb(22, 22, 22);
+}
+
+.homeLink:hover, .advancedLink:hover, .imagesLink:hover{
+    text-decoration: underline;
 }
