--- a/advancedStyle.css
+++ b/advancedStyle.css
@@ -11,6 +11,10 @@ body{
     min-height: 100vh;
     width: 100%;
 }
+
+.imagesLink, .homeLink{
+    font-size: 13px;
+}
 img{
     margin: 20px;
     object-fit: contain;
