--- a/style.css
+++ b/style.css
@@ -112,12 +112,6 @@ ul>li a{
     font-size: 14px;
 }
 
-footer{
-    background-color: gray;
-    height: 14vh;
-    display: flex;
-    width: 100%;
-}
 
 h2{
     margin: 10px 10px;
@@ -135,3 +129,50 @@ h2{
     height: 95px;
 }
 
+.footerBosnia{
+    height: 50px;
+    background-color: rgba(211, 211, 211, 0.397);
+    border-bottom: 1px solid rgba(128, 128, 128, 0.24);
+}
+
+.bosniaTitle{
+    font-size: 17px;
+    line-height: 50px;
+    margin-left: 30px;
+    color: rgba(31, 31, 31, 0.651);
+}
+
+.lastFooter{
+    height: 50px;
+    background-color: rgba(211, 211, 211, 0.397);
+    overflow: hidden;
+}
+
+.leftside{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    list-style-type: none;
+    margin-top: -10px;
+}
+
+.leftside li{
+    margin-left: 20px;
+}
+
+.leftside a{
+    font-size: 15px;
+    color: rgba(31, 31, 31, 0.651);
+}
+
+.rightside{
+    margin-right: 30px;
+}
+
+.rightside a{
+    color: rgba(31, 31, 31, 0.651);
+}
+
+li>a:hover{
+    text-decoration: underline;
+}
