--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Source Sans Pro', sans-serif;
+    letter-spacing: .25px;
 }
 
 body{
@@ -15,8 +16,24 @@ body{
 
 header{
     display: flex;
-    justify-content: flex-end;  
+    justify-content: flex-end; 
+    align-items: center; 
     margin: 20px 30px;
+}
+
+.loginBtn{
+    font-size: 15px;
+    height: 35px;
+    width: 80px;
+    background-color: #4d90fe;
+    text-align: center;
+    outline: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    letter-spacing: .25px;
+    border-radius: 5px;
 }
 
 .imagesLink, .advancedLink, .homeLink{
