--- a/style.css
+++ b/style.css
@@ -226,4 +226,43 @@ li>a:hover{
         height: 30px;
     }
 
+    .btn1, .btn2{
+        font-size: 12px;
+        padding: 5px;
+    }
+
+    .languages{
+        width: 300px;
+    }
+
+    ul>li a{
+        font-size: 10px;
+    }
+
+    .footerBosnia{
+        height: 25px;
+    }
+
+    .bosniaTitle{
+        font-size: 8px;
+        line-height: 20px;
+        margin-left: 10px;
+    }
+
+    .lastFooter{
+        height: 20px;
+    }
+
+    .leftside{
+        margin-top: -30px;
+    }
+
+    .leftside li{
+        margin-left: 0;
+    }
+
+    .leftside a{
+        font-size: 5px;
+    }
+
 }
