--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ li>a:hover{
 }
 
 
-@media only screen and (min-width: 300px) and (max-width: 500px){
+@media only screen and (min-width: 280px) and (max-width: 500px){
 
     .imagesLink, .advancedLink, .homeLink, .loginBtn{
         font-size: 10px;
@@ -212,7 +212,7 @@ li>a:hover{
     }
 
     img{
-        height: 30px;
+        height: 50px;
     }
 
     .search-part{
@@ -265,4 +265,41 @@ li>a:hover{
         font-size: 5px;
     }
 
+}
+
+@media only screen and (min-width: 501px) and (max-width: 750px){
+
+    img{
+        height: 80px;
+    }
+
+    .search-part{
+        justify-content: center;
+    }
+
+    .search-bar{
+        width: 400px;
+        margin: 0 auto;
+    }
+
+    .languages{
+        width: 500px;
+    }
+
+    .footerBosnia, .lastFooter{
+        height: 30px;
+    }
+
+    .bosniaTitle{
+        font-size: 10px;
+        line-height: 32px;
+    }
+
+    .leftside{
+        margin-top: -21px;
+    }
+
+    .leftside a{
+        font-size: 9px;
+    }
 }
